Squashed beta-1.5.5-pre02
commit 73d789c7e4d1c3e219c00ea7f0957612647bf46b
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Jan 17 13:00:28 2016 +0100

    Reminder options in preferences

commit 236fa833bae793cc06f3d169a88286c8e3e6a258
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Jan 17 12:33:19 2016 +0100

    fix npe

commit dac834a925674bf3748ca953e962463ed4a2e1e0
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Jan 17 12:09:15 2016 +0100

    Fix navigation to reminder from reminder popup

--- a/freeplane/viewer-resources/translations/Resources_en.properties
+++ b/freeplane/viewer-resources/translations/Resources_en.properties
@@ -1193,6 +1193,7 @@ OptionPanel.relative=Relative
 OptionPanel.remind_type_of_new_nodes.tooltip=<html>"Ask" will ask you (use in doubt).<br>"Yes" displays the rich text editor.<br>"No" displays the plain text editor.</html>
 OptionPanel.remind_use_rich_text_in_new_nodes=Use rich text for pasted nodes
 OptionPanel.remindersBlink=Reminders blink
+OptionPanel.remindersShowNotifications=Reminders show notification popups
 OptionPanel.remindersStandardDelay=Reminder delay
 OptionPanel.remove_notes_without_question=Remove notes without question?
 OptionPanel.remove_notes_without_question.tooltip=If this check box is set the notes belonging to the selected nodes are removed without confirmation. This can cause loss of information if pressed without intention.
@@ -1270,6 +1271,7 @@ OptionPanel.separator.other_defaults=Other Defaults
 OptionPanel.separator.others=Other key bindings
 OptionPanel.separator.outline_view=Outline view
 OptionPanel.separator.patterns=Patterns
+OptionPanel.separator.reminderOptions=Reminder options
 OptionPanel.separator.RichTextEditor=Rich-Text Editor
 OptionPanel.separator.root_node_appearance=Root node appearance
 OptionPanel.separator.save=Save
