Squashed beta-1.5.6-pre05
commit be07b7e718758b3b9f9ad764455442ce6385db4b
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Feb 7 11:41:55 2016 +0100

    Fix non ascii character

commit 1a67500b23fa40fd6a7061992b2a5283e66b774c
Merge: f4a2053 00826f4
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Feb 7 11:36:52 2016 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit f4a2053698f5d364e7c09e9f5c1831e4d7851b3b
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Feb 7 11:36:45 2016 +0100

    Change action name "New free node" to "New floating node"

commit 00826f4fb9c4b795c00d3254ee89e19a29230621
Merge: 63c1211 f2fe475
Author: Weblate <noreply@weblate.org>
Date:   Sun Feb 7 00:10:08 2016 +0100

    Merge remote-tracking branch 'origin/1.5.x' into 1.5.x

commit 63c1211ad52bbf012a4bf5cefa9ccc66d75670ad
Author: Олександр Пилипчук <pilipchukap@rambler.ru>
Date:   Sat Feb 6 16:20:39 2016 +0100

    Translated using Weblate (Ukrainian)

    Currently translated at 99.7% (1919 of 1923 strings)

commit 895419cea3ed7e76ca931d9411baa07b28845759
Author: Ldm Public <ldmpub@gmail.com>
Date:   Sat Feb 6 18:59:51 2016 +0100

    Translated using Weblate (French)

    Currently translated at 99.5% (1914 of 1923 strings)

--- a/freeplane/viewer-resources/translations/Resources_en.properties
+++ b/freeplane/viewer-resources/translations/Resources_en.properties
@@ -858,7 +858,7 @@ NewerFileRevisionsFoundDialog.question=Found newer revisions of {0}!
 NewerFileRevisionsFoundDialog.restore=Rest&ore
 NewerFileRevisionsFoundDialog.restore.tooltip=Replace {0} by {1}
 NewerFileRevisionsFoundDialog.title=Newer file revisions found!
-NewFreeNodeAction.text=New free node
+NewFreeNodeAction.text=New floating node
 NewLevelStyleAction.text=Add level style
 newmap.install.addon.question={0} seems to be an add-on package\nDo you want to install it?\n(Select "No" for normal open.)
 newmap.install.addon.title=Install add-on?
