--- a/freeplane/resources/translations/Resources_de.properties
+++ b/freeplane/resources/translations/Resources_de.properties
@@ -877,7 +877,7 @@ NewerFileRevisionsFoundDialog.question=Neuere Versionen von {0} gefunden!
 NewerFileRevisionsFoundDialog.restore=&Wiederherstellen
 NewerFileRevisionsFoundDialog.restore.tooltip={0} mit {1} ersetzen
 NewerFileRevisionsFoundDialog.title=Neuere Dateiversionen gefunden!
-NewFreeNodeAction.text=&Freier Knoten
+NewFreeNodeAction.text=Neuer schwebender Knoten
 NewLevelStyleAction.text=Neue Automatisches Layout Ebene
 newmap.install.addon.question={0} scheint ein Add-on Paket zu sein.\nM\u00F6chten Sie es installieren?\n(W\u00E4hlen Sie "Nein" zum normalem \u00D6ffnen.)
 newmap.install.addon.title=Add-on installieren?
@@ -1071,7 +1071,7 @@ OptionPanel.export_icons_in_html.tooltip=<html>Gibt an, ob die Icons auch nach H
 OptionPanel.exported_image_resolution_dpi=Exportierte Bildaufl\u00F6sung (in DPI)
 OptionPanel.Files=Dateien
 OptionPanel.first=Am Anfang
-OptionPanel.fit_to_viewport=Hintegrundbild auf Fenstergröße anpassen
+OptionPanel.fit_to_viewport=Hintegrundbild auf Fenstergr\u00F6e anpassen
 OptionPanel.fold_on_click_inside=Knoten beim Hineinklicken falten/entfalten
 OptionPanel.foldingsymbolwidth=Gr\u00F6\u00DFe des Symbols, das die Faltung anzeigt
 OptionPanel.foldingsymbolwidth.tooltip=<html>Gr\u00F6\u00DFe des Kreises, der die Faltung symbolisiert</html>
