--- a/freeplane/resources/translations/Resources_uk_UA.properties
+++ b/freeplane/resources/translations/Resources_uk_UA.properties
@@ -142,6 +142,7 @@ automatically_save_message=\u041A\u0430\u0440\u0442\u0430 \u0431\u0443\u043B\u04
 AutomaticEdgeColor.FOR_BRANCHES=\u0434\u043B\u044F \u0433\u0456\u043B\u043E\u043A
 AutomaticEdgeColor.FOR_COLUMN=\u0434\u043B\u044F \u0441\u0442\u043E\u0432\u043F\u0447\u0438\u043A\u0430
 AutomaticEdgeColor.FOR_COLUMNS=\u0434\u043B\u044F \u0441\u0442\u043E\u0432\u043F\u0447\u0438\u043A\u0456\u0432
+AutomaticEdgeColor.FOR_LEVELS=\u0434\u043B\u044F \u0440\u0456\u0432\u043D\u0456\u0432
 AutomaticEdgeColor.ON_BRANCH_CREATION=\u043F\u0440\u0438 \u0441\u0442\u0432\u043E\u0440\u0435\u043D\u043D\u0456 \u0433\u0456\u043B\u043A\u0438
 AutomaticEdgeColorHookAction.text=\u0410\u0432\u0442\u043E\u043C\u0430\u0442\u0438\u0447\u043D\u0438\u0439 \u043A\u043E\u043B\u0456\u0440 \u0440\u0435\u0431\u0440\u0430
 AutomaticLayout.ALL=\u0434\u043B\u044F \u0432\u0441\u0456\u0445 \u0432\u0443\u0437\u043B\u0456\u0432
@@ -859,7 +860,6 @@ NewerFileRevisionsFoundDialog.question=\u0417\u043D\u0430\u0439\u0434\u0435\u043
 NewerFileRevisionsFoundDialog.restore=\u0412\u0456\u0434&\u043D\u043E\u0432\u0438\u0442\u0438
 NewerFileRevisionsFoundDialog.restore.tooltip=\u0417\u0430\u043C\u0456\u043D\u0438\u0442\u0438 {0} \u043D\u0430 {1}
 NewerFileRevisionsFoundDialog.title=\u0417\u043D\u0430\u0439\u0434\u0435\u043D\u043E \u043D\u043E\u0432\u0456\u0448\u0443 \u0432\u0435\u0440\u0441\u0456\u044E \u0444\u0430\u0439\u043B\u0443!
-NewFreeNodeAction.text=\u041D\u043E\u0432\u0438\u0439 \u0432\u0456\u043B\u044C\u043D\u0438\u0439 \u0432\u0443\u0437\u043E\u043B
 NewLevelStyleAction.text=\u0414\u043E\u0434\u0430\u0442\u0438 \u0441\u0442\u0438\u043B\u044C \u0440\u0456\u0432\u043D\u044F
 newmap.install.addon.question={0} \u0441\u0445\u043E\u0436\u0438\u0439 \u043D\u0430 \u043F\u0430\u043A\u0435\u0442 \u0434\u043E\u0434\u0430\u0442\u043A\u0443\u21B5\n\u0411\u0430\u0436\u0430\u0454\u0442\u0435 \u0439\u043E\u0433\u043E \u0432\u0441\u0442\u0430\u043D\u043E\u0432\u0438\u0442\u0438?\u21B5\n(\u0412\u0438\u0431\u0435\u0440\u0456\u0442\u044C "\u041D\u0456", \u0449\u043E\u0431 \u043F\u0440\u043E\u0441\u0442\u043E \u0432\u0456\u0434\u043A\u0440\u0438\u0442\u0438 \u0444\u0430\u0439\u043B.)
 newmap.install.addon.title=\u0412\u0441\u0442\u0430\u043D\u043E\u0432\u0438\u0442\u0438 \u0434\u043E\u0434\u0430\u0442\u043E\u043A?
@@ -1333,6 +1333,7 @@ OptionPanel.spelling_opt_ignore_words_with_numbers=\u0417\u043D\u0435\u0445\u044
 OptionPanel.spelling_opt_suggestions_limit_dialog=\u041D\u0430\u0439\u0431\u0456\u043B\u044C\u0448\u0430 \u043A\u0456\u043B\u044C\u043A\u0456\u0441\u0442\u044C \u043F\u0440\u043E\u043F\u043E\u0437\u0438\u0446\u0456\u0439 \u0432 \u0434\u0456\u0430\u043B\u043E\u0437\u0456
 OptionPanel.spelling_opt_suggestions_limit_menu=\u041D\u0430\u0439\u0431\u0456\u043B\u044C\u0448\u0430 \u043A\u0456\u043B\u044C\u043A\u0456\u0441\u0442\u044C \u043F\u0440\u043E\u043F\u043E\u0437\u0438\u0446\u0456\u0439 \u0443 \u043C\u0435\u043D\u044E
 OptionPanel.SplitToWordsAction.auxiliaryWordList=\u0441\u043F\u0438\u0441\u043E\u043A \u0434\u043E\u043F\u043E\u043C\u0456\u0436\u043D\u0438\u0445 \u0441\u043B\u0456\u0432
+OptionPanel.SplitToWordsAction.charactersAcceptedInWord=\u0437\u043D\u0430\u043A\u0456\u0432 \u0443 \u0441\u043B\u043E\u0432\u0430\u0445
 OptionPanel.SplitToWordsAction.leaveOriginalNodeEmpty=\u0437\u0430\u043B\u0438\u0448\u0438\u0442\u0438 \u043F\u043E\u0447\u0430\u0442\u043A\u043E\u0432\u0438\u0439 \u0432\u0443\u0437\u043E\u043B \u043F\u043E\u0440\u043E\u0436\u043D\u0456\u043C
 OptionPanel.SplitToWordsAction.nodeNumbersInLine=\u0447\u0438\u0441\u043B\u043E \u0432\u0443\u0437\u043B\u0456\u0432 \u0443 \u0440\u044F\u0434\u043A\u0443
 OptionPanel.SplitToWordsAction.saveOriginalTextAsDetails=\u0437\u0431\u0435\u0440\u0435\u0433\u0442\u0438 \u043F\u043E\u0447\u0430\u0442\u043A\u043E\u0432\u0438\u0439 \u0442\u0435\u043A\u0441\u0442 \u044F\u043A \u043F\u043E\u0434\u0440\u043E\u0431\u0438\u0446\u0456
