Squashed beta-1.5.6-pre02
commit 6d11457eebd9456daf57922ffbcae76a7858e6ce
Merge: bba8cb1 d97700a
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Jan 30 15:33:35 2016 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit bba8cb1d1f43e1c990b12a321dbf2b2cb73c2c07
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Jan 30 15:29:30 2016 +0100

    Fix BlinkingNodeHook for clones

commit a95663827c2857c0302d37b54e1d65a570245ad6
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Jan 30 15:20:54 2016 +0100

    Fix reminder icons for clones

commit dfdc8c9fdbfa3204cad54fe154179984d51d3758
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Jan 30 15:06:22 2016 +0100

    Fix NPE

commit e3ae6fdfa26fdc3d50c10367a0c7a26b7ef64a76
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Jan 30 14:59:53 2016 +0100

    Fix class cast exception

commit 3a3098f3a60f739d7488b8bba5e6e8aeb0fc8d4c
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Jan 30 14:27:16 2016 +0100

    Do not add not existing files to last opened list

commit 2d1dbb6fd25791bf4d67d9c10e4ab8dfc8f467c4
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Jan 30 14:22:36 2016 +0100

    Fix new unsaved map title name

commit b7fcb5df29adc2edcaaefb9b4d8b669d0754f684
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Jan 30 14:05:44 2016 +0100

    Refactoring: move getXsltPipeReader() from XmlImporter to
    XsltPipeReaderFactory

commit d97700ae56a28ee8fe90f6352ac11bf0ace993d7
Merge: fcbc051 630f0a7
Author: Weblate <noreply@weblate.org>
Date:   Thu Jan 28 21:42:39 2016 +0100

    Merge remote-tracking branch 'origin/1.5.x' into 1.5.x

commit fcbc051ac8182cc5b0e4e135e3808d208e19e4be
Author: Ldm Public <ldmpub@gmail.com>
Date:   Wed Jan 27 21:39:01 2016 +0100

    Translated using Weblate (French)

    Currently translated at 99.5% (1913 of 1921 strings)

commit 630f0a7ed7e2717abba85d0d30aa2da5ef382dfe
Author: Dimitry Polivaev <dpolivaev@gmx.d

--- a/freeplane/resources/translations/Resources_fr.properties
+++ b/freeplane/resources/translations/Resources_fr.properties
@@ -224,6 +224,7 @@ connector_label=Libell\u00E9 du connecteur
 connector_lines=Trait du connecteur
 connector_shapes=Forme du connecteur
 ConnectorColorAction.text=Couleur du connecteur...
+ConvertCloneToIndependentNodeAction.text=Dupliquer
 CopyAction.text=Copier
 CopyAction.tooltip=Copie la branche s\u00E9lectionn\u00E9e
 CopyAttributes.text=Copier les attributs
@@ -456,6 +457,7 @@ filter_time=Date
 FilterComposerDialog.save=Enregistrer sous...
 FilterCondition=Conditions de filtrage
 filterConditions=Filtres personnalis\u00E9s
+filterConditions.noActions=Aucun filtre nomm\u00E9
 filters_not_loaded=Les filtres n'ont pas pu \u00EAtre charg\u00E9s, le fichier est corrompu
 find=Rechercher
 find_what=Que rechercher ?
@@ -513,6 +515,7 @@ FreeplaneHelpStarter.text=Aide...
 FreeplaneHelpStarter.tooltip=Aide \u00E9tendue de Freeplane
 GettingStartedAction.text=Guide de d\u00E9marrage rapide
 goto=Aller \u00E0
+goto.noActions=Aucun n\u0153ud cible
 GotoLinkNodeAction.text=Aller au lien
 GotoNodeAction.text=Aller au n\u0153ud portant l'ID...
 GrabKeyDialog.common.cancel=Annuler
@@ -682,6 +685,7 @@ ImportFolderStructureAction.text=Une arborescence de dossiers...
 ImportLinkedBranchAction.text=La carte li\u00E9e
 ImportLinkedBranchWithoutRootAction.text=La carte li\u00E9e sans la racine
 ImportMindmanagerFiles.text=Carte MindManager X5...
+ImportXmlFile.text=Importer un fichier XML
 increase_branch_font_size=Augmenter la taille du texte de la branche
 IncreaseNodeFontAction.text=Augmenter la taille du texte
 internal_error_tooltip=Freeplane a rencontr\u00E9 des erreurs. Pour consulter le dernier fichier log stock\u00E9 dans {0}, cliquez.
@@ -695,6 +699,7 @@ italicise_branch=Branche en italique
 java_version=Version Java : {0}
 JoinNodesAction.text=Fusionner les n\u0153uds
 lastOpenedMaps=Fichiers r\u00E9cents
+lastOpenedMaps.noActions=Aucune carte dans l'historique
 latex_editor=Modifier la formule LaTeX
 LatexDeleteLatexAction.text=Supprimer la formule LaTeX
 LatexEditLatexAction.text=Modifier la formule LaTeX...
@@ -714,6 +719,7 @@ link_not_found=Lien {0} non trouv\u00E9.
 links=Lien
 load=Ouvrir...
 load_accelerator_presets=Ouvrir
+load_accelerator_presets.noActions=Aucun raccourci
 LoadAcceleratorPresetsAction.textPatterns.text=Touches de fonction par d\u00E9faut
 locking_failed_by_open=Impossible de verrouiller la carte {0}. Ouverture en lecture-seule.
 locking_failed_by_save_as=La carte {0} est verrouill\u00E9e. Enregistrement impossible.
@@ -907,6 +913,10 @@ not_saved_for_image_error=Vous devez enregistrer la carte avant d'ajouter une im
 not_saved_for_link_error=La carte doit avoir \u00E9t\u00E9 enregistr\u00E9e avant de pouvoir d\u00E9finir un lien vers un fichier.
 note_window_location=Position de l'\u00E9diteur de notes
 notes=Note
+NotificationOptions.CLOSE=Fermer
+NotificationOptions.REMIND_ME_LATER=Me le demander plus tard
+NotificationOptions.REMOVE_REMINDER=Supprimer le rappel
+NotificationOptions.SELECT_NODE=Aller au rappel
 ok=Valider
 OKAction.text=Valider
 OnlineReference.text=Documentation en ligne
@@ -1187,6 +1197,9 @@ OptionPanel.rectangle=Rectangle
 OptionPanel.relative=Relatif
 OptionPanel.remind_type_of_new_nodes.tooltip=<html>"Demander" vous permettra de choisir.<br>"Oui" affiche l'\u00E9diteur de texte riche.<br>"Non" affiche l'\u00E9diteur de texte brut.</html>
 OptionPanel.remind_use_rich_text_in_new_nodes=Coller les n\u0153uds en texte riche
+OptionPanel.remindersBlink=Clignotement des rappels
+OptionPanel.remindersShowNotifications=Fen\u00EAtre de notification lors des rappels
+OptionPanel.remindersStandardDelay=D\u00E9lai d'alerte
 OptionPanel.remove_notes_without_question=Supprimer les notes sans confirmation
 OptionPanel.remove_notes_without_question.tooltip=Supprime imm\u00E9diatement les notes, sans confirmation
 OptionPanel.resources_use_default_font_for_notes_too=Utiliser cette police dans les notes
@@ -1262,6 +1275,7 @@ OptionPanel.separator.other_defaults=Autres r\u00E9glages par d\u00E9faut
 OptionPanel.separator.others=Autres raccourcis clavier
 OptionPanel.separator.outline_view=Vue plan
 OptionPanel.separator.patterns=Mod\u00E8les
+OptionPanel.separator.reminderOptions=Options pour les rappels
 OptionPanel.separator.RichTextEditor=\u00C9diteur de texte riche
 OptionPanel.separator.root_node_appearance=Apparence du n\u0153ud racine
 OptionPanel.separator.save=Enregistrement
@@ -1494,6 +1508,7 @@ RedoFilterAction.text=Filtre suivant
 regular_expressions=Expressions r\u00E9guli\u00E8res
 ReminderHookAction.text=Supprimer l'alerte
 ReminderHookAction.tooltip=Supprime l'alerte d'un n\u0153ud
+reminderNotification=Notification pour les rappels
 remove_file_from_list_on_error=Le fichier {0} est introuvable ! Souhaitez-vous le retirer de la liste des fichiers r\u00E9cents ?
 remove_shortcut_question=Remplacer le raccourci ?
 RemoveAllAlwaysUnfoldedNodeFlagsAction.text=R\u00E9-initialiser les n\u0153uds d\u00E9pli\u00E9s
@@ -1825,6 +1840,12 @@ TimeListAction.text=Afficher la liste des alertes...
 TimeListAction.tooltip=Montre toutes les alertes horaire ainsi que les n\u0153uds associ\u00E9s.
 TimeManagementAction.text=Afficher le calendrier...
 TimeManagementAction.tooltip=Affiche le calendrier
+TimePeriodUnits.days=jours
+TimePeriodUnits.hours=heures
+TimePeriodUnits.minutes=minutes
+TimePeriodUnits.ms=ms
+TimePeriodUnits.seconds=secondes
+TimePeriodUnits.weeks=semaines
 ToggleChildrenFoldedAction.text=Plier/D\u00E9plier la branche
 ToggleDetailsAction.text=Afficher les d\u00E9tails
 ToggleFBarAction.text=Barre des touches de fonction
