Squashed beta-1.5.6-pre04
commit f2fe475f465d88ec86eba0941ff3763f96517ce0
Merge: 0e4c578 ca764b7
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Feb 7 00:10:07 2016 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit 0e4c578b9154036b345a1f4837480ddffd9876b2
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Feb 7 00:09:50 2016 +0100

    Fix initialization of AlwaysUnfoldedNode actions

commit ca764b77eb0914edb054bdbb059560a7e45e5458
Author: Pedro Albuquerque <pa1@live.com.pt>
Date:   Sat Feb 6 17:25:20 2016 +0100

    Translated using Weblate (Portuguese (Portugal))

    Currently translated at 100.0% (1923 of 1923 strings)

--- a/freeplane/resources/translations/Resources_pt_PT.properties
+++ b/freeplane/resources/translations/Resources_pt_PT.properties
@@ -142,6 +142,7 @@ automatically_save_message=O mapa foi gravado automaticamente (com o nome {0})..
 AutomaticEdgeColor.FOR_BRANCHES=para ramos
 AutomaticEdgeColor.FOR_COLUMN=para coluna
 AutomaticEdgeColor.FOR_COLUMNS=para colunas
+AutomaticEdgeColor.FOR_LEVELS=para n\u00EDveis
 AutomaticEdgeColor.ON_BRANCH_CREATION=ao criar ramo
 AutomaticEdgeColorHookAction.text=Cor da linha autom\u00E1tica
 AutomaticLayout.ALL=para todos os n\u00F3s
@@ -1059,7 +1060,7 @@ OptionPanel.export_icons_in_html.tooltip=<html> Informar se o HTML exportado a p
 OptionPanel.exported_image_resolution_dpi=Resolu\u00E7\u00E3o da imagem exportada (em DPI)
 OptionPanel.Files=Ficheiros
 OptionPanel.first=Primeiro
-OptionPanel.fit_to_viewport=Ajustar \u00E0 janela
+OptionPanel.fit_to_viewport=Ajustar imagem de fundo \u00E0 janela
 OptionPanel.fold_on_click_inside=Dobrar ao clicar no interior
 OptionPanel.foldingsymbolwidth=Largura do s\u00EDmbolo de dobragem
 OptionPanel.foldingsymbolwidth.tooltip=<html>Largura do c\u00EDrculo de dobragem</html>
@@ -1334,6 +1335,7 @@ OptionPanel.spelling_opt_ignore_words_with_numbers=Ignorar palavras com n\u00FAm
 OptionPanel.spelling_opt_suggestions_limit_dialog=N\u00FAmero m\u00E1ximo de sugest\u00F5es na janela
 OptionPanel.spelling_opt_suggestions_limit_menu=N\u00FAmero m\u00E1ximo de sugest\u00F5es no menu
 OptionPanel.SplitToWordsAction.auxiliaryWordList=lista de palavras auxiliares
+OptionPanel.SplitToWordsAction.charactersAcceptedInWord=Caracteres em palavras
 OptionPanel.SplitToWordsAction.leaveOriginalNodeEmpty=manter n\u00F3 original vazio
 OptionPanel.SplitToWordsAction.nodeNumbersInLine=n\u00FAmero do n\u00F3 na linha
 OptionPanel.SplitToWordsAction.saveOriginalTextAsDetails=gravar texto original como detalhes
