--- a/freeplane/resources/translations/Resources_fr.properties
+++ b/freeplane/resources/translations/Resources_fr.properties
@@ -181,6 +181,7 @@ cannot_add_parent_diff_parents=Pour utiliser cette fonction, tous les n\u0153uds
 cannot_add_parent_to_root=Le n\u0153ud racine ne peut \u00EAtre ajout\u00E9 comme n\u0153ud fils.
 cannot_delete_root=Le n\u0153ud racine ne peut \u00EAtre ni coup\u00E9, ni supprim\u00E9.
 cannot_join_nodes_with_children=Impossible de fusionner des n\u0153uds ayant des fils.
+cannot_move_into_child_node=Impossible de d\u00E9placer dans le fils
 cannot_move_to_child=Impossible de d\u00E9placer un n\u0153ud dans l'un de ses fils.
 CenterAction.text=Centrer
 CenterSelectedNodeAction.text=Centrer le n\u0153ud s\u00E9lectionn\u00E9
@@ -698,7 +699,7 @@ invalid_url_msg=Impossible de cr\u00E9er une URL valide pour {0}
 ItalicAction.text=Italique
 italicise_branch=Branche en italique
 java_version=Version Java : {0}
-JoinNodesAction.text=Fusionner les n\u0153uds
+JoinNodesAction.separator.format=Fusionner les noeuds avec "{0}"
 lastOpenedMaps=Fichiers r\u00E9cents
 lastOpenedMaps.noActions=Aucune carte dans l'historique
 latex_editor=Modifier la formule LaTeX
@@ -857,6 +858,7 @@ NewerFileRevisionsFoundDialog.question=Il existe des versions plus r\u00E9centes
 NewerFileRevisionsFoundDialog.restore=Restaurer
 NewerFileRevisionsFoundDialog.restore.tooltip=Remplacer {0} par {1}
 NewerFileRevisionsFoundDialog.title=Une version plus r\u00E9cente du fichier a \u00E9t\u00E9 trouv\u00E9e !
+NewFreeNodeAction.text=Nouveau n\u0153ud flottant
 NewLevelStyleAction.text=Cr\u00E9er un style automatique de niveau
 newmap.install.addon.question={0} semble \u00EAtre un add-on.\nSouhaitez-vous l''installer ?\n(R\u00E9pondez "Non" pour ouvrir le fichier normalement)
 newmap.install.addon.title=Installer l'add-on ?
@@ -1054,7 +1056,7 @@ OptionPanel.export_icons_in_html.tooltip=Indique que l'HTML export\u00E9 doit in
 OptionPanel.exported_image_resolution_dpi=R\u00E9solution de l'image export\u00E9e (en DPI)
 OptionPanel.Files=Fichiers
 OptionPanel.first=En haut
-OptionPanel.fit_to_viewport=Ajuster \u00E0 taille de la fen\u00EAtre
+OptionPanel.fit_to_viewport=Ajuster l'image de fond \u00E0 la taille de la fen\u00EAtre
 OptionPanel.fold_on_click_inside=Cliquer sur un n\u0153ud plie ou d\u00E9plie la branche
 OptionPanel.foldingsymbolwidth=Taille du symbole de pliage
 OptionPanel.foldingsymbolwidth.tooltip=Taille du cercle indiquant une branche pli\u00E9e
@@ -1095,6 +1097,7 @@ OptionPanel.il__enter_confirms_by_default=La touche "Entr\u00E9e" valide le n\u0
 OptionPanel.image_cache=Pour les images
 OptionPanel.it=Italien
 OptionPanel.ja=Japonais
+OptionPanel.JoinNodesAction.textSeparators=S\u00E9parateur de texte
 OptionPanel.key_type_action=Saisie clavier hors d'un n\u0153ud
 OptionPanel.Keystrokes=Raccourcis clavier
 OptionPanel.ko=Cor\u00E9en
@@ -1255,6 +1258,7 @@ OptionPanel.separator.icon_properties=Ic\u00F4nes
 OptionPanel.separator.icons=Ic\u00F4nes dans le menu "Ic\u00F4nes"
 OptionPanel.separator.initial_map_size=Taille initiale de la carte
 OptionPanel.separator.inline_editor=\u00C9dition de n\u0153ud dans la carte
+OptionPanel.separator.JoinNodesAction=Fusionner les noeuds
 OptionPanel.separator.key_typing=Saisie clavier
 OptionPanel.separator.language=Langue
 OptionPanel.separator.latex=LaTeX
@@ -1300,6 +1304,7 @@ OptionPanel.shape_horizontal_margin=Marge horizontale
 OptionPanel.shape_vertical_margin=Marge verticale
 OptionPanel.sharp_bezier=Courbe effil\u00E9
 OptionPanel.sharp_linear=Droit effil\u00E9
+OptionPanel.shouldCenterSmallMaps=Centrer les cartes de petite taille
 OptionPanel.show_icon_for_attributes=Afficher les ic\u00F4nes des attributs
 OptionPanel.show_node_tooltips=Afficher les info-bulles sur les n\u0153uds
 OptionPanel.show_note_icons=Afficher les ic\u00F4nes de Notes
