--- a/freeplane/resources/translations/Resources_pt_PT.properties
+++ b/freeplane/resources/translations/Resources_pt_PT.properties
@@ -700,7 +700,6 @@ invalid_url_msg=Imposs\u00EDvel criar URL v\u00E1lido para {0}
 ItalicAction.text=It\u00E1lico
 italicise_branch=It\u00E1lico
 java_version=Vers\u00E3o Java: {0}
-JoinNodesAction.text=Juntar n\u00F3s
 lastOpenedMaps=Mapas mais recentes
 lastOpenedMaps.noActions=Sem mapas no hist\u00F3rico
 latex_editor=Editar f\u00F3rmula LaTex
@@ -861,6 +860,7 @@ NewerFileRevisionsFoundDialog.question=Encontradas novas revis\u00F5es de {0}!
 NewerFileRevisionsFoundDialog.restore=Resta&urar
 NewerFileRevisionsFoundDialog.restore.tooltip=Substituir {0} por {1}
 NewerFileRevisionsFoundDialog.title=Novas revis\u00F5es de ficheiro encontradas!
+NewFreeNodeAction.text=Novo n\u00F3 flutuante
 NewLevelStyleAction.text=Adicionar estilo de n\u00EDvel
 newmap.install.addon.question={0} parece ser um pacote de suplementos\nQuer instal\u00E1-lo?\n(selecione "N\u00E3o" para abrir normalmente).
 newmap.install.addon.title=Instalar suplemento?
@@ -1307,6 +1307,7 @@ OptionPanel.shape_horizontal_margin=Margem horizontal
 OptionPanel.shape_vertical_margin=Margem vertical
 OptionPanel.sharp_bezier=Curva afiada (B\u00E9zier)
 OptionPanel.sharp_linear=Linear afiada
+OptionPanel.shouldCenterSmallMaps=Centrar mapas pequenos
 OptionPanel.show_icon_for_attributes=Mostrar \u00EDcone para atributos
 OptionPanel.show_less_than_N_nodes_by_default_after_load=Carregar do mapa ou desdobrar alguns n\u00F3s
 OptionPanel.show_node_tooltips=Mostrar sugest\u00F5es
