--- a/freeplane/resources/translations/Resources_hr.properties
+++ b/freeplane/resources/translations/Resources_hr.properties
@@ -457,6 +457,7 @@ filter_time=Datumski filtar
 FilterComposerDialog.save=&Spremi
 FilterCondition=Uvjeti filtera
 filterConditions=Korisni\u010Dki definirani filtri
+filterConditions.noActions=Nema imenovanih filtera
 filters_not_loaded=Filtar ne mo\u017Ee biti u\u010Ditan, datoteka je zauzeta
 find=Na\u0111i
 find_what=Tra\u017Ei \u0161to?
@@ -514,6 +515,7 @@ FreeplaneHelpStarter.text=Pomo\u0107...
 FreeplaneHelpStarter.tooltip=Pro\u0161irena pomo\u0107 Freeplanea
 GettingStartedAction.text=Vodi\u010D za podu\u010Davanje
 goto=Idi na
+goto.noActions=Nema ciljanih \u010Dvorova
 GotoLinkNodeAction.text=Idi na vezu
 GotoNodeAction.text=Idi na \u010Dvor sa ID brojem...
 GrabKeyDialog.common.cancel=Odustani
@@ -683,6 +685,7 @@ ImportFolderStructureAction.text=Strukture mape (Folder)...
 ImportLinkedBranchAction.text=Povezana grana
 ImportLinkedBranchWithoutRootAction.text=(Povezana grana) bez korijena...
 ImportMindmanagerFiles.text=MindManager X5 mape...
+ImportXmlFile.text=Uvoz xml datoteke
 increase_branch_font_size=Ve\u0107a slova
 IncreaseNodeFontAction.text=Ve\u0107a slova
 internal_error_tooltip=Prona\u0111ene su interne gre\u0161ke. Pogledajte posljednju log datoteku log.0 za vi\u0161e informacija.
@@ -696,6 +699,7 @@ italicise_branch=Ukositi
 java_version=Verzija Java: {0}
 JoinNodesAction.text=Pove\u017Ei \u010Dvorove
 lastOpenedMaps=Nedavno kori\u0161tene mape
+lastOpenedMaps.noActions=Nema mapa u popisu povijesti
 latex_editor=Uredi LaTeX formulu
 LatexDeleteLatexAction.text=Obri\u0161i LaTe&X formulu
 LatexEditLatexAction.text=Uredi LaTe&X formulu...
@@ -717,6 +721,7 @@ link_not_found=Veza {0} nije na\u0111ena.
 links=Veze
 load=&U\u010Ditaj
 load_accelerator_presets=U\u010Ditaj
+load_accelerator_presets.noActions=Nema memoriranih postavki
 LoadAcceleratorPresetsAction.textPatterns.text=Tekst
 locking_failed_by_open=Zaklju\u010Davanje mape{0} nije uspjelo. Otvaranje samo za \u010Ditanje.
 locking_failed_by_save_as=Zaklju\u010Davanje mape {0} nije uspjelo. Radnja Spremi kao je prekinuta.
@@ -910,6 +915,10 @@ not_saved_for_image_error=Mapa mora biti pohranjena prije postavljanja slike
 not_saved_for_link_error=Mapa mora biti spremljena prije povezivanja datoteke preko pretra\u017Eiva\u010Da datoteka
 note_window_location=Pozicija prozora bilje\u0161ki
 notes=Bilje\u0161ka
+NotificationOptions.CLOSE=Zatvori
+NotificationOptions.REMIND_ME_LATER=Podsjeti me kasnije
+NotificationOptions.REMOVE_REMINDER=Ukloni podsjetnik
+NotificationOptions.SELECT_NODE=Idi na podsjetnik
 ok=&U redu
 OKAction.text=&Uredu
 OnlineReference.text=Dokumentacija - WEB
@@ -1192,6 +1201,8 @@ OptionPanel.relative=Relativne
 OptionPanel.remind_type_of_new_nodes.tooltip=<html>"Pitaj"  (use in doubt).<br>"Da" prika\u017Ei ure\u0111iva\u010D za bolje oblikovanje teksta .<br>"Ne" prika\u017Ei jednostavni tekstualni ure\u0111iva\u010D.</html>
 OptionPanel.remind_use_rich_text_in_new_nodes=Koristi bolje oblikovani tekst za zaljepljene \u010Dvorove
 OptionPanel.remindersBlink=Treptaju\u0107i podsjetnik
+OptionPanel.remindersShowNotifications=Podsjetnici prikazuju sko\u010Dne prozore s obavijestima
+OptionPanel.remindersStandardDelay=Ka\u0161njenje podsjetnika
 OptionPanel.remove_notes_without_question=Obrisati bilje\u0161ke bez upita?
 OptionPanel.remove_notes_without_question.tooltip=Ako je polje odabrano pripadaju\u0107e bilje\u0161ke odabranog \u010Dvora bit \u0107e obrisane bez potvrde.Ovo mo\u017Ee prouzro\u010Diti gubitak informacija ukoliko nismo pa\u017Eljivi kod brisanja.
 OptionPanel.resources_use_default_font_for_notes_too=Koristi zadani font za bilje\u0161ke
@@ -1268,6 +1279,7 @@ OptionPanel.separator.other_defaults=Ostale zadane vrijednosti
 OptionPanel.separator.others=Ostale tipkovni\u010Dke kratice
 OptionPanel.separator.outline_view=Op\u0107i pregled
 OptionPanel.separator.patterns=Uzorci
+OptionPanel.separator.reminderOptions=Mogu\u0107nosti podsjetnika
 OptionPanel.separator.RichTextEditor=Ure\u0111iva\u010D teksta
 OptionPanel.separator.root_node_appearance=Izgled korijenskog \u010Dvora
 OptionPanel.separator.save=Spremi
@@ -1501,6 +1513,7 @@ RedoFilterAction.text=Ponovi
 regular_expressions=Regularni izraz
 ReminderHookAction.text=Ukloni podsjetnik
 ReminderHookAction.tooltip=Ukloni podsjetnik s \u010Dvora.
+reminderNotification=Obavijest podsjetnika
 remove_file_from_list_on_error=Datoteka {0} nije otvorena. \u017Delite li je maknuti s liste nedavno otvaranih datoteka?
 remove_shortcut_question={0} trenutno je dodijeljeno {1}.\n\u017Delite li dodijeliti ovu tipkovni\u010Dku kraticu {2}?
 remove_shortcut_title=\u017Delite li obrisati tipkovni\u010Dku kraticu?
@@ -1835,6 +1848,12 @@ TimeListAction.text=Prika\u017Ei popis vremenskih podsjetnika ...
 TimeListAction.tooltip=Prikazuje sve vremenske podsjetnike i pripadaju\u0107e \u010Dvorove.
 TimeManagementAction.text=Prika\u017Ei kalendar...
 TimeManagementAction.tooltip=<html> Prika\u017Ei kalendarski modul (autora je Kai Toedter).</html>
+TimePeriodUnits.days=dani
+TimePeriodUnits.hours=sati
+TimePeriodUnits.minutes=minute
+TimePeriodUnits.ms=ms
+TimePeriodUnits.seconds=sekunde
+TimePeriodUnits.weeks=tjedni
 ToggleChildrenFoldedAction.text=Rasklopi/Sklopi \u010Dvor (Djeca)
 ToggleDetailsAction.text=Prika\u017Ei/Sakrij detalje \u010Dvora
 ToggleFBarAction.text=F- traka
