--- a/freeplane/resources/translations/Resources_pt_PT.properties
+++ b/freeplane/resources/translations/Resources_pt_PT.properties
@@ -459,6 +459,7 @@ filter_time=Filtro de data
 FilterComposerDialog.save=&Gravar
 FilterCondition=Condi\u00E7\u00F5es do filtro
 filterConditions=Filtros definidos pelo utilizador
+filterConditions.noActions=Sem filtros com nome
 filters_not_loaded=Imposs\u00EDvel carregar o filtro, ficheiro corrompido
 find=Localizar
 find_what=Localizar o qu\u00EA
@@ -516,6 +517,7 @@ FreeplaneHelpStarter.text=Ajuda...
 FreeplaneHelpStarter.tooltip=Extens\u00E3o da ajuda do Freeplane
 GettingStartedAction.text=Tutorial
 goto=Ir para
+goto.noActions=Sem n\u00F3s destino
 GotoLinkNodeAction.text=Ir para a liga\u00E7\u00E3o
 GotoNodeAction.text=Ir para o n\u00F3 com a ID...
 GrabKeyDialog.common.cancel=Cancelar
@@ -685,6 +687,7 @@ ImportFolderStructureAction.text=Estrutura de pastas...
 ImportLinkedBranchAction.text=Importar ramo &ligado
 ImportLinkedBranchWithoutRootAction.text=Ramo ligado sem &raiz...
 ImportMindmanagerFiles.text=Mapa MindManager X5...
+ImportXmlFile.text=Importar fiheiro XML
 increase_branch_font_size=Aumentar letra
 IncreaseNodeFontAction.text=Aumentar letra
 internal_error_tooltip=Erro interno. Clique para abrir o di\u00E1rio log.0 para mais informa\u00E7\u00E3o.
@@ -698,6 +701,7 @@ italicise_branch=It\u00E1lico
 java_version=Vers\u00E3o Java: {0}
 JoinNodesAction.text=Juntar n\u00F3s
 lastOpenedMaps=Mapas mais recentes
+lastOpenedMaps.noActions=Sem mapas no hist\u00F3rico
 latex_editor=Editar f\u00F3rmula LaTex
 LatexDeleteLatexAction.text=Remover f\u00F3rmula LaTex
 LatexEditLatexAction.text=Editar f\u00F3rmula LaTex...
@@ -719,6 +723,7 @@ link_not_found=Liga\u00E7\u00E3o {0} n\u00E3o encontrada.
 links=Liga\u00E7\u00E3o
 load=&Carregar
 load_accelerator_presets=Carregar
+load_accelerator_presets.noActions=Sem predefini\u00E7\u00F5es
 LoadAcceleratorPresetsAction.textPatterns.text=Padr\u00F5es de texto
 locking_failed_by_open=Bloqueio do mapa {0} falhou. A abrir em modo s\u00F3 de leitura.
 locking_failed_by_save_as=Bloqueio do mapa {0} falhou. Opera\u00E7\u00E3o "Gravar como" cancelada.
@@ -1199,6 +1204,7 @@ OptionPanel.relative=Relativo
 OptionPanel.remind_type_of_new_nodes.tooltip=<html>"Perguntar" pergunta-lhe (use se tem d\u00FAvidas).<br>"Sim" mostra o editor de Rich Text.<br>"N\u00E3o" mostra o editor de texto simples.</html>
 OptionPanel.remind_use_rich_text_in_new_nodes=Use Rich Text para n\u00F3s colados
 OptionPanel.remindersBlink=Piscar dos lembretes
+OptionPanel.remindersShowNotifications=Lembretes mostram bal\u00F5es de notifica\u00E7\u00E3o
 OptionPanel.remindersStandardDelay=Atraso do lembrete
 OptionPanel.remove_notes_without_question=Remover notas sem confirmar?
 OptionPanel.remove_notes_without_question.tooltip=Se esta caixa estiver marcada, as notas dos n\u00F3s selecionados s\u00E3o removidas sem confirma\u00E7\u00E3o. Isto pode causar perda de informa\u00E7\u00E3o n\u00E3o intencional.
@@ -1276,6 +1282,7 @@ OptionPanel.separator.other_defaults=Outras predefini\u00E7\u00F5es
 OptionPanel.separator.others=Outros v\u00EDnculos chave
 OptionPanel.separator.outline_view=Vista de destaque
 OptionPanel.separator.patterns=Padr\u00F5es
+OptionPanel.separator.reminderOptions=Op\u00E7\u00F5es de lembretes
 OptionPanel.separator.RichTextEditor=Editor de Rich-Text
 OptionPanel.separator.root_node_appearance=Apar\u00EAncia do n\u00F3-ra\u00EDz
 OptionPanel.separator.save=Gravar
